# magus

./: .gitignore  .pre-commit-config.yaml  README.md  acknowledgments.md  bundle.bat  bundle.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
client/: __main__.py  animation.py  assets.py  netclient.py  pyproject.toml
client/behaviours/: animator.py  camera.py  player.py  sprite_renderer.py
client/src/client/: __main__.py  animation.py  cooldown_mask.py  hud.py  netclient.py
client/src/client/behaviours/: animator.py  camera.py  entities.py  mage.py  network_behaviour.py  network_entity.py  network_identity.py  network_manager.py  player.py  sprite_renderer.py
client/src/client/scenes/: game_over_menu.py  game_scene.py  lobby.py  main_menu.py
common/: __init__.py  behaviour.py  binary.py  enums.py  greet.py  netpeer.py  network.py  node.py  packet.py  packets.py  pyproject.toml  simulation.py  utils.py
common/src/: enums.py  netpeer.py
common/src/common/: __init__.py  animation.py  animator.py  assets.py  behaviour.py  binary.py  container.py  diagnostics.py  enums.py  game.py  input.py  network.py  node.py  packets.py  primitives.py  simulation.py  transform.py  utils.py
common/src/common/behaviours/: animator.py  camera.py  collider.py  debug_console.py  network_behaviour.py  network_entity.py  network_entity_manager.py  physics.py  physics_object.py  physics_world.py  singleton_behaviour.py  sprite_renderer.py  tilemap.py  transform.py
common/src/common/engine/: animation.py  animator.py  assets.py  behaviour.py  game.py  network.py  node.py  packets.py  simulation.py  transform.py
common/src/common/magus/: entity_type.py  packets.py
game/: pyproject.toml
game/src/game/: __init__.py  animator_synchronizer.py  composite_value.py  entities.py  game_manager.py  lobby.py  lobby_base.py  mage.py  match.py  orders.py  packets.py  player.py  player_camera.py  projectile.py  spell.py
game/src/game/spells/: fireball.py  fireball_projectile.py  fireball_state.py  thrust_state.py
game/src/game/ui/: status_bar.py
scene_builder/: pyproject.toml
scene_builder/src/scene_builder/: __init__.py  __main__.py  base.py  client_scenes.py  fireball.py
server/: __main__.py  netserver.py  pyproject.toml
server/src/server/: __init__.py  __main__.py  netserver.py
server/src/server/behaviours/: entity_manager.py  (+2 more)
tests/: conftest.py  pyproject.toml  test_packet.py  test_packet_broker.py  test_utils.py
tests/engine/: test_packet.py  test_utils.py
tests/magus/: test_magus_packets.py
(+37 files in other folders)
