[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magus-client"
version = "0.0.1"
description = "Client app"
authors = [{name="Thomas Mergener"}]
requires-python = ">=3.10"

dependencies = [
  "pygame>=2.1",
  "magus-common",
  "magus-game"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]