[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magus-common"
version = "0.0.1"
description = "Shared library"
authors = [{name="Thomas Mergener"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

dependencies = [
  "pygame>=2.1"
]

[tool.setuptools]
packages = ["common"]