[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magus-game"
version = "0.0.1"
description = "Game logic"
authors = [{name="Thomas Mergener"}]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

dependencies = [
  "pyenet",
  "pygame>=2.1",
  "magus-common"
]

[tool.setuptools.packages.find]
where = ["src"]
